<resources>
    <string name="app_name">My Application</string>
    <string name="title_profile">Perfil</string>
    <string name="title_compañeros">Compañeros</string>
    <string name="title_goup_chat">Chat grupal</string>
    <string name="title_private_chat">Chat Privado</string>
    <string name="desc_imagen_fondo">Imagen de perfil</string>
    <string name="error_login">El usuario o la contraseña son incorrectos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_perfil">Nombre de perfil</string>
    <string name="foto_perfil_persona">Foto de perfil</string>
    <string name="nombre_cuenta">Cuenta de usuario</string>
    <string name="descripcion_persona">Descripción de la persona</string>
    <string name="seguir_mensaje">Seguir</string>
    <string name="dejar_seguir_mensaje">Dejar de seguir</string>
    <string name="abrir_mensaje">Abrir MD</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nombreInfoFragment">"Nombre del usuario"</string>
    <string name="biografiaInfoFragment">"Biografia del usuario"</string>
    <string name="imagen_usuario">Imagen del usuario</string>
    <string name="nombreUsuarioSeguido">Nombre del usuario</string>
    <string name="error_conexion">Ha habido un error con la conexión</string>
    <string name="NombreContent">Nombre del usuario</string>
    <string name="BiografiaContent">Biografía del usuario</string>
    <string name="UniversidadContent">Universidad del Usuario</string>
    <string name="CarreraContent">Carrera del usuario</string>
    <string name="CursoContent">Curso del usuario</string>
    <string name="FotoPerfilContent">Foto del usuario</string>
    <string name="menu_item_compartir">Compartir</string>
    <string name="subject_compartir">Mira el usuario que te he compartido</string>
    <string name="Nombre">Nombre</string>
    <string name="Biografia">Biografia</string>
    <string name="titulopeli">wgwle</string>
    <string name="fechaestreno">36892</string>
    <string name="carreraInfoFragment">Carrera del usuario</string>
    <string name="cursoInfoFragment">Curso del usuario</string>
    <string name="universidadInfoFragment">Universidad del usuario</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="creacionUsuario">creacionNuevoUsuario</string>
    <string name="nombreRegistro">Nombre del usuario</string>
    <string name="biografiaRegistro">biografia del usuario</string>
    <string name="registro_boton">REGISTRARSE</string>
    <string name="labelEstudios">Estudia:</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
</resources>