<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.VerPerfil"
    tools:showIn="@layout/activity_ver_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin">

        <TextView
            android:id="@+id/NombreContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/NombreContent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/BiografiaContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:text="@string/BiografiaContent"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UniversidadContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/UniversidadContent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CarreraContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CarreraContent"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CursoContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/CursoContent"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/FotoPerfilContent"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:contentDescription="@string/FotoPerfilContent"
            android:padding="8sp"
            app:srcCompat="@drawable/fondo" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>